// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Southwark Council Canada Water Library retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {
          "subtitled": true,
        },
        "bookingUrl": "https://www.southwark.gov.uk/southwark-presents/film-club-presents-ultima-imagem-canada-water-library",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1791201600000,
      },
    ],
    "showingId": "southwark.gov.uk-film-club-presents-ultima-imagem-canada-water-library",
    "title": "Film club presents:  A Última Imagem at Canada Water Library",
    "url": "https://www.southwark.gov.uk/southwark-presents/film-club-presents-ultima-imagem-canada-water-library",
  },
]
`;

exports[`Southwark Council Nunhead Library retrieve and find events 1`] = `
[
  {
    "category": "event",
    "overview": {
      "actors": [],
      "categories": [],
      "directors": [],
    },
    "performances": [
      {
        "accessibility": {},
        "bookingUrl": "https://www.southwark.gov.uk/southwark-presents/harold-moody-and-not-our-problem-nunhead-library",
        "format": {},
        "notes": "",
        "status": {},
        "time": 1792599300000,
      },
    ],
    "showingId": "southwark.gov.uk-harold-moody-and-not-our-problem-nunhead-library",
    "title": "Harold Moody and Not Our Problem - Nunhead Library",
    "url": "https://www.southwark.gov.uk/southwark-presents/harold-moody-and-not-our-problem-nunhead-library",
  },
]
`;
